Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.05.2022 08:51:43</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.05.2022 09:14:16</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -138,7 +138,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se salsou z cerstvych rajcata a okurek, zeleninova ryze, salatek 149</li><li>Peceny filet z cersrtve norske tresky se salsou z cerstvych rajcat a okurek, zeleninova ryze, salatek 175</li><li>Opekane thajske veprove nudlicky s matou, zelenou cibulkou a arasidy, ryzove nudle, salatek 149</li><li>Grilovana koroptvi prsicka s merunkovym catny, gratinovane brambory, salatek 175</li><li>Pecene bataty a papriky zapecene s ementalem, jahly, jogurtovy dip, salatek 149</li></ol>
+<ol><li>Peceny filet z norskeho slede v zeleninove marinade na spanelsky zpusob {en escabeche}, pecene brambory, salatek {L} 149</li><li>Spagety s pecenymi krevetami, uzenym divokym lososem, sum coj a petrzelkovym pestem, limetka {L} 175</li><li>Kubanske trhane veprove na pomerancich, piikantni cervene fazole, jasminova ryze, salatek 149</li><li>Bramborove gnocchi s toskanskym bazantim ragu se zampiony, paprikami, rajcaty a zralou goudou, salatek 169</li><li>Imam bayildi – turecke plnene lilky s rajcaty, cibulkou a balkanskym ovcim syrem, pohanka, salatek 149</li></ol>
 </td>
 </tr>
 </table>
