--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.05.2022 08:47:56</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 31.05.2022 09:12:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Úterý, 31. 05. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Gulášovka</strong>
+<strong>Tomatová s kari olejem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem NEBO těstovinou</strong>
+<strong>Míchaný salát s marinovanými vepřovými nudličkami a bagetou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							137,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s houbovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Anglická Krůtí játra s pečenými bramborami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
@@ -125,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z norskeho slede v zeleninove marinade na spanelsky zpusob {en escabeche}, pecene brambory, salatek {L} 149</li><li>Spagety s pecenymi krevetami, uzenym divokym lososem, sum coj a petrzelkovym pestem, limetka {L} 175</li><li>Kubanske trhane veprove na pomerancich, piikantni cervene fazole, jasminova ryze, salatek 149</li><li>Bramborove gnocchi s toskanskym bazantim ragu se zampiony, paprikami, rajcaty a zralou goudou, salatek 169</li><li>Imam bayildi – turecke plnene lilky s rajcaty, cibulkou a balkanskym ovcim syrem, pohanka, salatek 149</li></ol>
+<ol><li>Peceny filet z jihoceskeho pstruha se susenymi rajcaty v olivovem oleji, kari se zeleneho hrachu, salatek 149</li><li>Peceny filet z cerstveho africkeho sumecka se susenymi rajcaty v olivovem oleji, kari ze zeleneho hrachu, salatek 175</li><li>Kureci medailonky po jihoindicku {volny chov} v citronove omacce se zazvorem a kokosovym mlekem, jasminova ryze, salatek 149</li><li>Grilovane medailonky z hoveziho pavoucka a panenske svickove s pecenymi rajcaty, fazolove chilli s pecenymi palivymi paprikami, salatek 175</li><li>Smazeny arabsky cizrnovy falafel, jogurtovy dip, bulgur se smazenou cibulkou, salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
