--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.06.2022 08:52:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.06.2022 09:14:10</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 01. 06. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová s kari olejem</strong>
+<strong>Květáková</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s marinovanými vepřovými nudličkami a bagetou</strong>
+<strong>Vepřová roláda se špenátem a bramborovým knedlíkem plnenym uzeným</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Anglická Krůtí játra s pečenými bramborami a tatarkou</strong>
+<strong>Čočka s párkem, vejcem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							135,-
 						</span>
 </p>
 <p>
@@ -137,7 +137,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z jihoceskeho pstruha se susenymi rajcaty v olivovem oleji, kari se zeleneho hrachu, salatek 149</li><li>Peceny filet z cerstveho africkeho sumecka se susenymi rajcaty v olivovem oleji, kari ze zeleneho hrachu, salatek 175</li><li>Kureci medailonky po jihoindicku {volny chov} v citronove omacce se zazvorem a kokosovym mlekem, jasminova ryze, salatek 149</li><li>Grilovane medailonky z hoveziho pavoucka a panenske svickove s pecenymi rajcaty, fazolove chilli s pecenymi palivymi paprikami, salatek 175</li><li>Smazeny arabsky cizrnovy falafel, jogurtovy dip, bulgur se smazenou cibulkou, salatek {L} 149</li></ol>
+<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou, citron {L} 149</li><li>Peceny filet z cerstveho norskeho lososa s kaparami a petrzelkovym pestem, bramborovy salat s cestvymi okurkami, zelenou cibulkou a majonezou 175</li><li>Malajsky hovezi rendang s pecenymi bataty a vonavym korenim, jasminova ryze, salatek 149</li><li>Italske syrove rizoto s pak coj, chrestem a pecenymi prsicky z divoke kachny plnenymi prosciuttem, salatek 175</li><li>Indicke zeleninove birjany z basmati ryze s pecenym syrem halloumi, kari ze zeleneho hrachu, salatek 149</li></ol>
 </td>
 </tr>
 </table>
