Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.06.2022 08:16:19</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.06.2022 09:12:58</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,17 +7,17 @@
 <h5>Čtvrtek, 02. 06. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Květáková</strong>
+<strong>Špenátová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová roláda se špenátem a bramborovým knedlíkem plnenym uzeným</strong>
+<strong>Smažený Masovo-Květákový karboš s vařeným bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							137,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 2.6.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie  (bez lepku) </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mechový dort s malinami</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Quinoa salát, červená řepa, baby špenát, sušené švestky, dýňová semínka  (bez lepku) </div>
+<div class="cena">79 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Minestrone v menu <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Minestrone samostatně <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí stroganoff, nakládaná okurka, žampiony, basmati rýže, zakysaná smetana <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Thajské krůtí kari, bambusové výhonky, cherry rajčata, koriandr, rýžové nudle, sezam <em title="Ryby">4</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Červená řepa po burgundsku, restované bramborové gnocchi, kořenová zelenina, žampiony <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cerstvymi okurkami, zelenou cibulkou a majonezou, citron {L} 149</li><li>Peceny filet z cerstveho norskeho lososa s kaparami a petrzelkovym pestem, bramborovy salat s cestvymi okurkami, zelenou cibulkou a majonezou 175</li><li>Malajsky hovezi rendang s pecenymi bataty a vonavym korenim, jasminova ryze, salatek 149</li><li>Italske syrove rizoto s pak coj, chrestem a pecenymi prsicky z divoke kachny plnenymi prosciuttem, salatek 175</li><li>Indicke zeleninove birjany z basmati ryze s pecenym syrem halloumi, kari ze zeleneho hrachu, salatek 149</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh se salsou z cerstvych rajcat a bylinek, korenena ryze s beluga cockou, salatek 149</li><li>Peceny filet z cerstveho islandskeho okounika se salsou z cerstvych rajcat a bylinek, korenena ryze s beluga cockou, salatek 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, salatek 149</li><li>Burrito s trhanou pecenou husou, rajcetem a ledovym salatem, okurkove tzatziki, pecene brambory, salatek 175</li><li>Recka zapecena vajecna frittata s cuketami, rajcaty a ovcim balkanskym syrem, zeleninovy kuskus, salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
