Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.06.2022 08:43:56</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.06.2022 09:11:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh se salsou z cerstvych rajcat a bylinek, korenena ryze s beluga cockou, salatek 149</li><li>Peceny filet z cerstveho islandskeho okounika se salsou z cerstvych rajcat a bylinek, korenena ryze s beluga cockou, salatek 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, salatek 149</li><li>Burrito s trhanou pecenou husou, rajcetem a ledovym salatem, okurkove tzatziki, pecene brambory, salatek 175</li><li>Recka zapecena vajecna frittata s cuketami, rajcaty a ovcim balkanskym syrem, zeleninovy kuskus, salatek {L} 149</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se susenymi rajcaty a olivami, cizrnovy salat se zeleninou, bylinkami a beluga cockou 149</li><li>Peceny cerstvy platyz a kambala se susenymi rajcaty a olivami, cizrnovy salat se zeleninou, bylinkami a beluga cockou 175</li><li>Balkanska musaka s hovezim a krutim masem, cuketami, rajcaty a zelenymi bylinkami zapecena ve smetanove omacce, salatek {L} 149</li><li>Grilovany kebab z prsicek koroptve a divoke kachny v tanduri marinade, korenena ryze s beluga cockou, jablecno-zazvorove catny, salatek 175</li><li>Indicka korma s kvetakem, hraskem, halloumi, cuketami, orisky a kokosovym mlekem, jasminova ryze 149</li></ol>
 </td>
 </tr>
 </table>
