--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.06.2022 09:11:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.06.2022 09:34:55</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 03. 06. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Špenátová</strong>
+<strong>Bílá rybí se zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený Masovo-Květákový karboš s vařeným bramborem a hořčicí</strong>
+<strong>Kuřecí stehno na paprice s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s asijským rybím filátkem</strong>
+<strong>Dukátové buchtičky s vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							115,-
 						</span>
 </p>
 <p>
