Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.06.2022 08:44:44</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 06.06.2022 09:11:10</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -133,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se susenymi rajcaty a olivami, cizrnovy salat se zeleninou, bylinkami a beluga cockou 149</li><li>Peceny cerstvy platyz a kambala se susenymi rajcaty a olivami, cizrnovy salat se zeleninou, bylinkami a beluga cockou 175</li><li>Balkanska musaka s hovezim a krutim masem, cuketami, rajcaty a zelenymi bylinkami zapecena ve smetanove omacce, salatek {L} 149</li><li>Grilovany kebab z prsicek koroptve a divoke kachny v tanduri marinade, korenena ryze s beluga cockou, jablecno-zazvorove catny, salatek 175</li><li>Indicka korma s kvetakem, hraskem, halloumi, cuketami, orisky a kokosovym mlekem, jasminova ryze 149</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, makrela, sled}, kvetakem, fazolovymi lusky a kokosovym mlekem, jasminova ryze 149</li><li>Indonesky nasi goreng s krevetami, zeleninou, krevetovou pastou, omeletkami a zelenymi bylinkami, salatek 179</li><li>Palive a vonave goanske vindalu s veprovym masem, bramborami, cerstvym chilli a garam masala, jasminova ryze, salatek 149</li><li>Grilovane medailonky z krutich prsou s dzemem z cervene cibule, pecene brambory, salatek 175</li><li>Zeleny chrest se sazenym vajickem a stouchanym zlutym hrachem se zelenymi bylinkami, salatek 149</li></ol>
 </td>
 </tr>
 </table>
