Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.06.2022 08:44:30</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.06.2022 09:11:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thieboudienne – senegalska kulata ryze s kousky ryb, pecenou zeleninou a rajcaty, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s koprovo-citronovou jogurtovou omackou, stouchane brambory se zelenou cibulkou, listovy salatek 175</li><li>Kousky peceneho kohouta {bez kosti} v thajske arasidove omacce s pecenymi paprikami a kokosovym mlekem, jasminova ryze, listovy salatek 149</li><li>Medailonky z teleci kyty s kaparami a citrony, stouchane brambory se zelenou cibulkou, listovy salatek 175</li><li>Burrito s pikantnim fazolovym chilli s pecenymi paprikami a chipotle, krupkovy salat s cerstvou zeleninou a bylinkami, listovy salatek {L} 149</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a ancovickovym dresinkem, stredomorsky fusilli salat se zeleninou a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstveho morskeho dasa s pecenymi rajcaty a ancovickovym dresinkem, stredomorsky fusilli salat se zeleninou a zelenymi bylinkami {L} 179</li><li>Ramen s pecenymi pikantnimi selecimi ribsy, mladym zelim, sazenym vajickem, psenicnymi nudlemi a zelenymi bylinkami v silnem vyvaru z hovezich harf {L} 149</li><li>Pecena divoka kachna s nadivkou s kachnimi jatry s petrzelkou, jablecne catny, gratinovane brambory, salatek 175</li><li>Indicky dal z cervene cocky se zazvorem, rajcaty a pecenym kvetakem s ovcim balkanskym syrem, salatek 149</li></ol>
 </td>
 </tr>
 </table>
