Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.06.2022 08:43:45</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.06.2022 09:12:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 10. 06. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Dršťková</strong>
+<strong>Kari polévka s cizrnou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Fish and chips s tatarkou</strong>
+<strong>Uzená krkovička s bramborovou kaší a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							137,-
 						</span>
 </p>
 <p>
-<strong>Frankfurtská Vepřová plec s rýží</strong>
+<strong>Makové palačinky s tvarohem a švestkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							115,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 10.6.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Míša dort</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Závin jablko-tvaroh, rozinky, mandle</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Obložený žitný chléb</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s pečeným lilkem a těstovinou v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s pečeným lilkem a těstovinou samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí burrito wrap, rýže, fazole, sýr cheddar, tomatová salsa, variace listových salátů, česnekový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Cuketové karbanátky s parmazánem, bylinkový kuskus, citronový creme fraiche <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a ancovickovym dresinkem, stredomorsky fusilli salat se zeleninou a zelenymi bylinkami {L} 149</li><li>Peceny filet z cerstveho morskeho dasa s pecenymi rajcaty a ancovickovym dresinkem, stredomorsky fusilli salat se zeleninou a zelenymi bylinkami {L} 179</li><li>Ramen s pecenymi pikantnimi selecimi ribsy, mladym zelim, sazenym vajickem, psenicnymi nudlemi a zelenymi bylinkami v silnem vyvaru z hovezich harf {L} 149</li><li>Pecena divoka kachna s nadivkou s kachnimi jatry s petrzelkou, jablecne catny, gratinovane brambory, salatek 175</li><li>Indicky dal z cervene cocky se zazvorem, rajcaty a pecenym kvetakem s ovcim balkanskym syrem, salatek 149</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 149</li><li>Ceviche z cerstve bile norske tresky se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 175</li><li>Pikantni jamajske veprove stew s pecenymi bataty, cerstvymi chilli paprickami a jerk korenim, jasminova ryze, salatek 149</li><li>Smazeny teleci sekany rizek s ementalem a petrzelkou, stouchane brambory se zelenou cibulkou, rajcatovy salat {L} 175</li><li>Smazene psenicne nudle s uzenym tempehem, pecenou letni zeleninou a sazenym vajickem, salatek 149 </li></ol>
 </td>
 </tr>
 </table>
