Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.06.2022 08:45:39</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.06.2022 09:11:06</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -108,7 +108,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Bramborové noky s grilovanou zeleninou, bylinkové pesto, parmazán, cherry rajčata <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Bulgur s grilovanou zeleninou, bylinkové pesto, parmazán, cherry rajčata <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">155 Kč</div>
 <div class="clear"></div>
 </li>
@@ -148,7 +148,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 149</li><li>Ceviche z cerstve bile norske tresky se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 175</li><li>Pikantni jamajske veprove stew s pecenymi bataty, cerstvymi chilli paprickami a jerk korenim, jasminova ryze, salatek 149</li><li>Smazeny teleci sekany rizek s ementalem a petrzelkou, stouchane brambory se zelenou cibulkou, rajcatovy salat {L} 175</li><li>Smazene psenicne nudle s uzenym tempehem, pecenou letni zeleninou a sazenym vajickem, salatek 149 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s petrzelkovym pestem a paprickami jalapenos, frijoles refritos {stouchane fazole}, salatek 149</li><li>Peceny filet z cerstveho morskeho vlka s petrzelkovym pestem a paprickami jalapenos, frijoles refritos, salatek 175</li><li>Thajske zlute kari s krutim masem, paprikami, cuketami, mladym zelim, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Grilovane medailonky z panenske svickove se zampiony a zelenym peprem, pohanka se smazenou cibulkou, salatek 175</li><li>Bramborove gnocchi s brynzou a prazenymi vlasskymi orechy, salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
